# medusa

./: LICENSE  README.md  demo_cache.sqlite  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/medusa/: __init__.py  app.py  hello.py  weather.py
src/medusa/static/css/: style.css
src/medusa/templates/: base.html
