[tool.poetry]
name = "medusa"
version = "0.1.0"
description = "Deigital Signage flask app for OIH Foyer"
authors = ["Devahsish Gaiwkad <ishay.gaikwad@gmail.com>"]
readme = "README.md"
packages = [{include = "medusa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
requests = "^2.32.4"
requests-cache = "^1.2.1"
tzdata = "^2025.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
